# x2r-template

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  README.md  pyproject.toml
{{cookiecutter.project_slug}}/{{cookiecutter.pkg_name}}/: cli.py
